# wowhead_cli

./: .gitignore  AGENTS.md  FUTURE_TASKS.md  Makefile  README.md  ROADMAP.md  pyproject.toml
docs/: BLIZZARD_API_CLI.md  BLIZZARD_API_CLI_PLAN.md  CURSEFORGE_CLI.md  CURSEFORGE_CLI_PLAN.md  EXPANSION_FILTERING_PLAN.md  ICY_VEINS_CLI_PLAN.md  IDENTITY_CONTRACT.md  LINTING_AND_COMPLEXITY_PLAN.md  METHOD_CLI_PLAN.md  MIGRATION_CHECKLIST.md  PACKAGE_LAYOUT.md  PRODUCT_PRINCIPLES.md  RAIDBOTS_CLI.md  RAIDBOTS_CLI_PLAN.md  RAIDERIO_CLI.md  RAIDERIO_CLI_PLAN.md  RAIDPLAN_CLI.md  RAIDPLAN_CLI_PLAN.md  README.md  REPO_STRUCTURE_AND_PACKAGING.md  ROADMAP.md  SIMC_CLI.md  SIMC_CLI_PLAN.md  SIMC_IMPLEMENTATION_PLAN.md  SIMC_MIGRATION_INVENTORY.md  UNDERMINE_EXCHANGE_CLI_PLAN.md  USAGE.md  WARCRAFTLOGS_CLI.md  WARCRAFTLOGS_CLI_PLAN.md  WARCRAFT_CLI.md  WARCRAFT_CLI_PLAN.md  WARCRAFT_WIKI_CLI.md  WARCRAFT_WIKI_CLI_PLAN.md  WOWHEAD_CLI.md  WOWHEAD_CLI_PLAN.md  WOWHEAD_EXPANSION_RESEARCH.md  WOWPROGRESS_CLI.md  WOWPROGRESS_CLI_PLAN.md  WRAPPER_PROVIDER_CONTRACT.md  entity-support-implementation-plan.md  (+1 more)
scripts/: create_worktree.sh  dev_deploy.sh  dump_warcraftlogs_docs.py  export_stable_skills.py  generate_provider_skills.py  link-openclaw-skill.sh  retire_dev_deploy.sh  setup_worktree_env.sh  stable_deploy.sh  stable_rollback.sh  trace_coverage.py
tests/: article_provider_testkit.py  conftest.py  test_article_bundle.py  test_article_discovery.py  test_article_provider_cli.py  test_cache.py  test_create_worktree.py  test_expansion_profiles.py  test_expansion_recorded_fixtures.py  (+44 more)
(+78 files in other folders)
