[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "warcraft"
version = "0.1.0"
description = "Umbrella Warcraft CLI with shared packages and service-specific commands"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.13.0,<5.0.0",
  "httpx>=0.28.1,<1.0.0",
  "orjson>=3.10.16,<4.0.0",
  "typer>=0.12.5,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
]
redis = [
  "redis>=5.0.0,<6.0.0",
]

[project.scripts]
warcraft = "warcraft_cli.main:run"
wowhead = "wowhead_cli.main:run"
method = "method_cli.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: live network contract tests against Wowhead endpoints",
]

[tool.hatch.build.targets.wheel]
packages = [
  "packages/warcraft-core/src/warcraft_core",
  "packages/warcraft-api/src/warcraft_api",
  "packages/warcraft-content/src/warcraft_content",
  "packages/warcraft-cli/src/warcraft_cli",
  "packages/wowhead-cli/src/wowhead_cli",
  "packages/method-cli/src/method_cli",
]
